Fix blue history button text on safari

--- a/src/style.css
+++ b/src/style.css
@@ -542,6 +542,10 @@ svg {
   padding: 0;
 }
 
+.trash-button span {
+  color: black;
+}
+
 .history-list-container > .trash-button svg {
   width: 30px;
 }
